--- a/Reddit_Clone/app/views/posts/new.html.erb
+++ b/Reddit_Clone/app/views/posts/new.html.erb
@@ -1,8 +1,9 @@
 <h1>Create a Post</h1>
 
-<form action="<%= sub_posts_url() %>" method="POST">
+<form action="<%= posts_url %>" method="POST">
 <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
 <input type="hidden" name="post[author_id]" value="<%= current_user.id %>">
+<input type="hidden" name="post[sub_id]" value="1">
 
 <label for="title">Title:
 <input type="text" name="post[title]" value="<%=@post.title%>"></label>
