--- a/Reddit_Clone/app/views/subs/show.html.erb
+++ b/Reddit_Clone/app/views/subs/show.html.erb
@@ -11,7 +11,7 @@
 <a href="<%=edit_sub_url%>">Edit Sub</a>
 <% end %>
 <p>list of posts to follow</p>
-
+<% debugger %>
 <ul>
 <% @sub.posts.each do |post| %>
   <li>
